crates/fai-syntax/src/snapshots/fai_syntax__layout__tests__binding_block.snap
---
source: crates/fai-syntax/src/layout.rs
expression: "render(\"module M\\nlet f x =\\n  body\")"
---
module
M
;
let
f
x
=
{
  body
}
<eof>
