crates/fai-syntax/src/snapshots/fai_syntax__layout__tests__bracketed_list.snap
---
source: crates/fai-syntax/src/layout.rs
expression: "render(\"module M\\nlet xs =\\n  [ 1\\n  , 2\\n  , 3 ]\")"
---
module
M
;
let
xs
=
{
  [
  1
  ,
  2
  ,
  3
  ]
}
<eof>
