crates/fai-syntax/src/snapshots/fai_syntax__layout__tests__if_else_chain.snap
---
source: crates/fai-syntax/src/layout.rs
expression: "render(\"module M\\nlet classify n =\\n  if n < 0 then \\\"neg\\\"\\n  else if n = 0 then \\\"zero\\\"\\n  else \\\"pos\\\"\")"
---
module
M
;
let
classify
n
=
{
  if
  n
  <
  0
  then
  "neg"
  else
  if
  n
  =
  0
  then
  "zero"
  else
  "pos"
}
<eof>
