crates/fai-syntax/src/snapshots/fai_syntax__layout__tests__multiline_then_else.snap
---
source: crates/fai-syntax/src/layout.rs
expression: "render(\"module M\\nlet f x =\\n  if c then\\n    a\\n  else\\n    b\")"
---
module
M
;
let
f
x
=
{
  if
  c
  then
  {
    a
  }
  else
  {
    b
  }
}
<eof>
