crates/fai-syntax/src/snapshots/fai_syntax__layout__tests__pipe_chain.snap
---
source: crates/fai-syntax/src/layout.rs
expression: "render(\"module M\\nlet describe n =\\n  n\\n  |> inc\\n  |> intToString\")"
---
module
M
;
let
describe
n
=
{
  n
  |>
  inc
  |>
  intToString
}
<eof>
